--- a/src/index.css
+++ b/src/index.css
@@ -1185,13 +1185,17 @@ border: solid 0.1em;
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
+  min-height: 10vh;
 }
 
 .sales-name{
  
   font-size: 0.9vw;
-  
+ display: flex;
+ justify-content: flex-start;
+ padding: 25%;
+  font-weight: bold;
 }
 
 
